--- a/index.html
+++ b/index.html
@@ -3,17 +3,12 @@
 <head>
   <title>Memory game</title>
   <link rel="stylesheet" href="styles.css">
-  
 </head>
 <body>
   <h3>Знайдено <span id="result">  </span> із <span id="couple">  </span> пар</h3>
 
-  <div class="grid-container">
-   
-  </div>
+  <div class="grid-container"></div>
 
-  
-  
   <script src="script.js"></script>
 </body>
 </html>
